--- a/src/App.scss
+++ b/src/App.scss
@@ -2,38 +2,40 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
+#root-layout {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
 
-.App-link {
-  color: rgb(112, 76, 182);
-}
+  & aside.ant-layout-sider {
+    margin: 10px 15px;
+    border-radius: 4px;
+    background: #fff;
+    padding: 20px 10px;
+  }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
+  & .spinner-container {
+    height: 600px;
+    width: 100vw;
+    align-items: center;
+    display: flex;
+    justify-content: center;
   }
-  50% {
-    transform: translateY(10px)
+
+  & #search-layout-header {
+    padding: 15px 10px;
+    background: white;
+    margin: 10px 20px;
   }
-  100% {
-    transform: translateY(0px)
+
+  & #search-layout-content-container {
+    margin: 0 10px;
+  }
+
+  & #search-result-container {
+    text-align: center;
+  }
+
+  & .main-result-title {
+    text-align: center;
+    width: 100vw;
   }
 }
